fix top social spacing

--- a/wp-content/themes/motherjones/style.css
+++ b/wp-content/themes/motherjones/style.css
@@ -1027,11 +1027,12 @@ ul.social-tools {
 }
 ul.social-tools li {
   display: inline-block;
+  padding: 0 15px;
 }
 
 .article .social-tools.top {
-  width: 95px;
-  padding: 0 15px;
+  width: 105px;
+  padding: 0;
 }
 .article .social-container.top {
   height: 17px;
